# gm-crypto-rs-demo

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml
docs/: glossary.md  using-gmcrypto-core.md  using-gmcrypto-core.zh-CN.md
docs/superpowers/plans/: 2026-05-24-sdk-examples.md  2026-05-24-sdk-tour.md  2026-05-31-bilingual-docs-phase-1.md
docs/superpowers/specs/: 2026-05-24-sdk-examples-design.md  2026-05-24-sdk-tour-design.md  2026-05-31-bilingual-docs-design.md
examples/: hmac_and_kdf.rs  hmac_sm3.rs  pbkdf2_hmac_sm3.rs  sm2_encrypt_decrypt.rs  sm2_key_encoding.rs  sm2_key_exchange.rs  sm2_sign_verify.rs  sm3_hash.rs  sm3_hashing.rs  sm4_aead.rs  sm4_cbc.rs  sm4_cbc_ctr.rs  sm4_ccm.rs  sm4_streaming.rs  sm4_xts.rs  tlcp_key_schedule.rs
scripts/: check-doc-sync.sh  check-example-sync.sh
src/: lib.rs  main.rs
tests/: cli.rs
