[package]
name = "gm-crypto-rs-demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Downstream crates.io smoke-test demo for the gmcrypto-core SM2/SM3 crate"
repository = "https://github.com/frankxue831/gm-crypto-rs-demo"
publish = false

[dependencies]
getrandom = { version = "0.4.2", features = ["sys_rng"], default-features = false }
gmcrypto-core = "=0.12.0"
rand_core = "0.10.1"
